--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "host": "vite preview --host"
+    "host": "vite --host"
   },
   "dependencies": {
+    "firebase": "^10.7.2",
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.6.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
